--- a/package.json
+++ b/package.json
@@ -55,13 +55,18 @@
     "apps/*"
   ],
   "dependencies": {
+    "@langchain/langgraph": "^0.2.65",
+    "@langchain/openai": "^0.5.6",
+    "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/serve-static": "^5.0.3",
+    "express": "^5.1.0",
     "next": "~15.2.4",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0"
+    "rxjs": "^7.8.2"
   }
 }
