--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "~18.16.9",
+    "@types/pg": "^8.11.14",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
     "autoprefixer": "10.4.13",
@@ -51,25 +52,29 @@
     "typescript-eslint": "^8.19.0",
     "webpack-cli": "^5.1.4"
   },
-  "workspaces": [
-    "packages/*",
-    "apps/*"
-  ],
   "dependencies": {
+    "@langchain/core": "^0.3.49",
     "@langchain/langgraph": "^0.2.65",
+    "@langchain/langgraph-checkpoint-postgres": "^0.0.4",
     "@langchain/openai": "^0.5.6",
     "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^10.0.2",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/serve-static": "^5.0.3",
+    "@nestjs/typeorm": "^11.0.0",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "next": "~15.2.4",
+    "pg": "^8.15.6",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.2",
-    "uuid": "^11.1.0"
+    "typeorm": "^0.3.22",
+    "uuid": "^11.1.0",
+    "zod": "^3.24.3"
   }
 }
